# bird-data

./: 0_standardize.ipynb  1_visualize.ipynb  Birds.ipynb  README.md  common_bird_migration_peaks.ipynb  mallard_collision_frequency.ipynb  most_common_species.ipynb  notes.md  pyproject.toml
.ipynb_checkpoints/: 1_visualize-checkpoint.ipynb  Birds-checkpoint.ipynb
raw_data/: 2016_CBCM_birds_willowbrook.csv
standard_data/: 2016_CBCM_birds_willowbrook.csv
